--- a/css/style.css
+++ b/css/style.css
@@ -328,8 +328,24 @@ h6 {
  */
 .overlay-color {
   position: relative;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.25);
 }
+
+.overlay-color:hover {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.zoomer{
+    transition: transform 0.25s ease-in-out;
+
+}
+.zoomer:hover {
+    transform: scale(1.05,1.05);
+
+}
+
+
 .bg-overlay::before {
   content: '';
   position: absolute;
