--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* body flex adjustment for  sticky footer */
+
 body {
     display: flex;
     min-height: 100vh;
@@ -8,6 +9,7 @@ body {
 main {
     flex: 1 0 auto;
 }
+
 /* --- */
 
 .brand-logo img {
@@ -75,7 +77,6 @@ main {
     padding-bottom: 70px;
 }
 
-
 .strong {
     font-weight: 600;
 }
@@ -108,12 +109,13 @@ img.dark {
     filter: brightness(60%) saturate(150%);
 }
 
-.zoomer{
+.zoomer {
     transition: transform 0.25s ease-in-out;
     filter: brightness(60%);
 }
+
 .zoomer:hover {
-    transform: scale(1.05,1.05);
+    transform: scale(1.05, 1.05);
     filter: brightness(90%);
 }
 
@@ -146,7 +148,7 @@ img.sponsor {
 
 img.sponsor:hover {
     filter: initial;
-    transform: scale(1.05,1.05);
+    transform: scale(1.05, 1.05);
 }
 
 #hero-slider {
@@ -157,6 +159,22 @@ img.sponsor:hover {
     transform: translateZ(50px);
 }
 
- #hero-slider .caption a {
+#hero-slider .caption a {
     transform: translateZ(100px);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
