--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ main {
     width: 100vh;
 }
 
+.more-screen-height {
+    height: 110vh;
+}
+
 .full-width {
     width: 100%;
 }
@@ -290,13 +294,13 @@ img.sponsor:hover {
 
 
 
-<<<<<<< HEAD
 nav ul li a:hover, nav ul li:hover {
     background:#ffb74d ;
 
-=======
+}
+
 .right-border-orange
 {
     border-right: 3px solid orange;
->>>>>>> origin/master
+
 }
