i dont know shit

--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -1,8 +1,7 @@
-*{
+/* *{
     font-family: 'Raleway', sans-serif;
-}
+} */
 
-#div1{
-     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(10%);
+.prize svg {
+    height: 100px;
 }
