--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,7 @@ nav ul li:hover {
     border-radius: 50% 0% 50% 0%;
     transform: scale(1.1, 1.1);
 }
+.parallax-container
+{
+     height: 78vh
+}
