--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,14 @@ img.sponsor:hover {
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
+
 }
+
+#hero-slider img {
+    transform: translateZ(50px);
+}
+
+
 
 .gradient-orange {
     background: #ff6f00;
