--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -2,6 +2,23 @@
     font-family: 'Raleway', sans-serif;
 } */
 
+.prize {
+    transform-style: preserve-3d;
+}
+
+
+
 .prize svg {
     height: 100px;
+    transform: translateZ(30px)
+}
+
+.prize h4 {
+    
+    transform: translateZ(50px)
+}
+
+.prize h5 {
+    
+    transform: translateZ(10px)
 }
