--- a/css/style.css
+++ b/css/style.css
@@ -373,3 +373,29 @@ nav ul li:hover {
 {
     font-size: 40px;
 }
+
+#registerbtn
+{
+    background-color: white;
+    color: orange;
+}
+
+#registerbtn:hover
+{
+    background-color: orange;
+    color: white;
+
+}
+#prizedivider
+{
+    width: 950px;
+    height: 1px;
+    background-color: black;
+    margin-left: 250px;
+}
+#domainthree
+{
+    margin: 0px;
+    width: 290px;
+    margin-right: 30px;
+}
