--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ nav ul li:hover {
     height: 2px;
     margin-left: 180px;
 }
-#dates
+#d    ates
 {
     font-size: 20px;
 }
@@ -398,4 +398,8 @@ nav ul li:hover {
     margin: 0px;
     width: 290px;
     margin-right: 30px;
+}
+#date
+{
+    font-size: 40px;
 }
