--- a/css/style.css
+++ b/css/style.css
@@ -314,10 +314,10 @@ img.sponsor:hover {
         background-image: url("../images/hero-slider/apple-black-and-white-brick-wall-169573.jpg");
     }
     50% {
-        background-image: url("../images/hero-slider/3.jpg");
+        background-image: url("../images/hero-slider/agreement-business-clapping-990817.jpg");
     }
     75% {
-        background-image: url("../images/hero-slider/4.jpg");
+        background-image: url("../images/hero-slider/advice-advise-advisor-7096.jpg");
     }
     100% {
         background-image: url("../images/hero-slider/5.jpg");
@@ -332,10 +332,10 @@ img.sponsor:hover {
         background-image: url("../images/hero-slider/apple-black-and-white-brick-wall-169573.jpg");
     }
     50% {
-        background-image: url("../images/hero-slider/3.jpg");
+        background-image: url("../images/hero-slider/agreement-business-clapping-990817.jpg");
     }
     75% {
-        background-image: url("../images/hero-slider/4.jpg");
+        background-image: url("../images/hero-slider/advice-advise-advisor-7096.jpg");
     }
     100% {
         background-image: url("../images/hero-slider/5.jpg");
